# llvm-kitchen-sinks

./: .gitignore  CMakeLists.txt  README.md
dead_code_elim/: CMakeLists.txt  dead_code_elim.cpp  dead_code_elim.hpp
instruction_counter/: CMakeLists.txt  instruction_counter.cpp  instruction_counter.hpp
tests/dead_code_elim/: README.md  main.cpp  test_branch.ll
tests/instruction_counter/: README.md  main.cpp
tmp/: README.md
